@@ -1,10 +1,14 @@
 
-pywbem-0.8.4.dev0  2016-05-09
+pywbem-0.8.4.dev0  2016-05-10
 
   BUG FIXES:
 
     * Fixed an IndexError in cim_http.wbem_request() that occurred during
       handling of another exception.
+
+    * Fixed issue with python 3 and https that was causing connect() to fail. 
+      This completely separates connect() code for python 3 ssl module from
+      python 2 m2cyrpto.
 
   ENHANCEMENTS:
 
